--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "node index.js",
+    "dev": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "heroku-prebuild": "npm install -f",
-    "heroku-postbuild": "npm run prod"
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": [
